tests/negative/regression/r30.orng
fn main() -> Int { 
    let x = fn ident (const ident: ()) -> () {}
    3
}
